--- a/AulaFullStackFront/style.css
+++ b/AulaFullStackFront/style.css
@@ -6,23 +6,23 @@ html, body {
     background-color: #f4f4f4;
 }
 
-body{
+body {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-.logo{
-    width: 100px;
+.logo {
+    width: 200px;
     margin-bottom: 20px;
 }
 
-.container{
-    background-color: white;
+.container {
+    background: white;
     padding: 40px 20px;
     border-radius: 12px;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     width: 320px;
     display: flex;
     flex-direction: column;
@@ -31,16 +31,18 @@ body{
     box-sizing: border-box;
 }
 
-h2{
+
+h2 {
     margin-top: 0;
     margin-bottom: 30px;
     font-size: 20px;
     text-align: center;
     font-weight: bold;
-    color: blue;
+    color: #284ea7;
+    font-weight: bold;
 }
 
-form{
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,7 +50,7 @@ form{
     gap: 15px;
 }
 
-input, button{
+input, button {
     width: 100%;
     padding: 12px;
     border-radius: 6px;
@@ -56,11 +58,11 @@ input, button{
     font-size: 14px;
 }
 
-input{
+input {
     border: 1px solid #ccc;
 }
 
-button{
+button {
     background-color: #28a745;
     color: white;
     border: none;
@@ -68,41 +70,54 @@ button{
     font-weight: bold;
     border: 2px solid;
     margin-top: 10px;
-    transition: 0.3s;
+    transition: background-color 0.3s;
 }
 
-button:hover{
+button:hover {
     background-color: #218838;
 }
 
-.mensagem{
+.link-usuarios {
+    margin-top: 25px;
+    text-decoration: none;
+    color: #007bff;
+    font-size: 14px;
+}
+
+.link-usuarios:hover {
+    text-decoration: underline;
+}
+ 
+
+.mensagem {
     position: fixed;
     top: 20px;
-    right: -308px;
+    right: -300px;
     padding: 15px;
     border-radius: 5px;
     color: white;
     font-weight: bold;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
-    transition: right 0.5s ease-out, opacity 0.5s ease-in-out;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    transition: right 0.5s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
     cursor: pointer;
     max-width: 300px;
     z-index: 1000;
 }
 
-.mensagem.sucesso{
+.mensagem.sucesso {
     background-color: #28a745;
 }
 
 .mensagem.erro {
-background-color: #dc3545;
+    background-color: #dc3545 !important;
 }
 
-.mensagem.visivel{
+.mensagem.visivel {
     right: 20px;
     opacity: 1;
 }
-.oculto{
+
+.oculto {
     display: none;
 }
